# htmx-test

./: Cargo.toml  todo.norg
css/: styles.css
migrations/: 20240221223943_initial.sql
src/: askama.rs  handler.rs  main.rs
src/database/: mod.rs  people.rs
src/database/models/: people.rs
templates/: base.html  index.html
templates/components/: people_form.html  people_table.html
templates/partials/: people_tr.html
