[package]
name = "htmx-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
axum = "0.7.4"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
tower-http = { version = "0.5.1", features = ["fs"] }
